rnsc/test_data/rns_integration/error/parser/inner_directive/invalid_flag.rns
; Tests that invalid access flag for inner class is detected and reported.
; Expected error: E-015 (invalid class access flag)
; private is not a valid class-level access flag.

.class public MyClass
.super java/lang/Object

.inner private Inner
    .super java/lang/Object
.inner_end

.class_end
